# Semantic-RAG

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.txt  typesense.ipynb
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
prompts/: rag_prompt.txt
src/: DeepEval.py  DeepEval2.py  data_loader.py  embedding.py  eval_bertscore.py  search.py  test_context_precision.py  vectorstore.py
src/results/: partial_results.json
