[project]
name = "implementation-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "chromadb>=1.4.0",
    "datasets>=4.5.0",
    "deepeval>=3.8.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "typesense>=1.3.0",
]
